44
================

12/11/20 Unredeemed voucher book view #934
12/11/20 strip csv values before imports
11/11/20 csvimport support to update weight and dob on existing
09/11/20 HomeAgain require city in a new TownCity tag
06/11/20 Add ActiveDiet fields to query builder
04/11/20 Include administering vet in medical table keys #779
02/11/20 Omit hidden conditional fields from form posts #931
02/11/20 Fix bug when calculating vacc reschedule dates
02/11/20 Add vaccination due to query builder
30/10/20 Undeletes for document repository and extra images
30/10/20 Add Kenyan locale
30/10/20 Image resizing should be a sitedef, not configuration
27/10/20 QB criteria: Add "Size is"
27/10/20 Check the adopter flag after a person merge
26/10/20 Fix deduct stocklevel from writing positive usage records
25/10/20 Include status data with <<AnimalMedicals>>
23/10/20 Prevent media.delete/expired from removing media
23/10/20 Stop reset_db from removing media
22/10/20 QB criteria: date brought in, vacc given/not given #602
17/10/20 Upgrade to TinyMCE 5.5.1
17/10/20 Fix TinyMCE mobile display and table borders
16/10/20 Support additional fields in query builder #602
16/10/20 Support people and incidents in query builder #602
15/10/20 Visual query builder #602
15/10/20 Correct schema handling of views for SQL editing
14/10/20 Fix SavourLife bug where fail condition marked adopted
13/10/20 Leave DBFS intact on delete for later deletion if needed
12/10/20 Support report SQL tokens in SQL Interface #901
09/10/20 Merge person comments when importing from CSV
09/10/20 Option to hide record views in audit trail (on by default)
08/10/20 Hide TinyMCE outline/drag handles during printing
07/10/20 maint_db_dump_lookups cron target
06/10/20 Fix TinyMCE default fontsize to match old version
06/10/20 Allow template paths to be specified in rename
06/10/20 Overridable default cut off of 3 years for PetLink chips
06/10/20 Allow OSM tile location to be overridden