@@ -1,6 +1,7 @@
 44
 ================
 
+12/11/20 Fix display of TNR and other special movements #933
 12/11/20 Unredeemed voucher book view #934
 12/11/20 strip csv values before imports
 11/11/20 csvimport support to update weight and dob on existing
